# basic-course-recommendation-service

./: .editorconfig  .gitignore  README.md  docker-compose.yml  foo.py  pyproject.toml
app/: .env.example  config.py  configs.py  initial_load.py  main.py  models.py  repositories.py
data/: courses.csv  participants.csv
