[tool.poetry]
name = "basic-course-recommendation-service"
version = "0.1.0"
description = "It is an imaginary scenario in which a recommendation engine is written for a course platform. For this purpose an Api with Python FastAPI and a Neo4j database is provided."
authors = ["JangasCodingplace <janisgoesser92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"

[tool.poetry.dev-dependencies]
python-dotenv = "^1.0.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
